--- a/gulpstart/package.json
+++ b/gulpstart/package.json
@@ -11,6 +11,7 @@
     "dependencies": {},
     "devDependencies": {
         "gulp": "^3.9.1",
+        "gulp-concat": "^2.6.1",
         "gulp-htmlmin": "^3.0.0",
         "gulp-less": "^3.3.2",
         "gulp-minify-css": "^1.2.4",
